--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>My AngularJS App</title>
+  <!-- Foundation CSS -->
+  <link rel="stylesheet" href="lib/foundation/css/normalize.css" />
+  <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
+  <!-- Application CSS -->
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
@@ -15,10 +19,14 @@
 
   <div>Angular seed app: v<span app-version></span></div>
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-  -->
+  <!-- Foundation JS dependencies -->
+  <script src="lib/foundation/js/vendor/jquery.js"></script>
+  <script src="lib/foundation/js/vendor/custom.modernizr.js"></script>
+  <script src="lib/foundation/js/foundation/foundation.js"></script>
+  <script src="lib/foundation/js/foundation/foundation.dropdown.js"></script>
+  <!-- AngularJS core -->
   <script src="lib/angular/angular.js"></script>
+  <!-- AngularJS app files -->
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
