--- a/app/index.html
+++ b/app/index.html
@@ -9,15 +9,18 @@
   <!-- Application CSS -->
   <link rel="stylesheet" href="css/app.css"/>
 </head>
+
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+  <header>
+    <nav class="top-bar" ng-include="'partials/nav.html'"></nav>
+  </header>
 
-  <div ng-view></div>
+  <main class="row" ng-view>
+  </main>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <footer class="">
+    <p>Angular seed app: v<span app-version></span></p>
+  </footer>
 
   <!-- Foundation JS dependencies -->
   <script src="lib/foundation/js/vendor/jquery.js"></script>
@@ -33,4 +36,5 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 </body>
+
 </html>
