update with basic sass

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="lib/foundation/css/normalize.css" />
   <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
   <!-- Application CSS -->
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
 </head>
 
 <body>
